@@ -9,70 +9,72 @@ import net.minecraft.world.entity.player.Player;
 import java.text.DecimalFormat;
 import java.util.List;
 
-public class HealthMonitor {
+public final class HealthMonitor {
 
-    private static final DecimalFormat healthFormat = new DecimalFormat("#.##");
-    private static final DecimalFormat coordsFormat = new DecimalFormat("#");
+    private static final DecimalFormat HEALTH_FORMAT = new DecimalFormat("#.##");
+    private static final DecimalFormat COORDS_FORMAT = new DecimalFormat("#");
 
     private static int afkTicks = 0;
-
-    private static float lastYaw, lastPitch;
+    private static float lastYaw = 0f;
+    private static float lastPitch = 0f;
 
     private static float healthWhenAfkStarted = -1f;
     private static boolean tookDamageWhileAfk = false;
 
+    private HealthMonitor() {}
+
     public static void monitorPlayerHealth(Minecraft client) {
-        if (!ConfigManager.isModEnabled || client.player == null) return;
+        if (!ConfigManager.isModEnabled) return;
 
         Player player = client.player;
-        boolean moving = isPlayerMoving(client);
+        if (player == null) return;
 
-        if (moving) {
-            afkTicks = 0;
-            healthWhenAfkStarted = -1f;
-            tookDamageWhileAfk = false;
+        if (isPlayerActive(client, player)) {
+            resetAfkState();
             return;
         }
 
         afkTicks++;
 
+        // mark baseline
         if (afkTicks == 1) {
             healthWhenAfkStarted = player.getHealth();
             tookDamageWhileAfk = false;
         }
 
-        if (healthWhenAfkStarted >= 0 && player.getHealth() < healthWhenAfkStarted) {
+        // detect damage while AFK 
+        float currentHealth = player.getHealth();
+        if (healthWhenAfkStarted >= 0 && currentHealth < healthWhenAfkStarted) {
             tookDamageWhileAfk = true;
-            healthWhenAfkStarted = player.getHealth(); 
+            healthWhenAfkStarted = currentHealth;
         }
 
+        // disconnect only if: AFK long enough AND health low AND took damage while AFK
         if (afkTicks >= ConfigManager.getAfkThresholdTicks()
-                && player.getHealth() <= ConfigManager.healthThreshold
+                && currentHealth <= ConfigManager.healthThreshold
                 && tookDamageWhileAfk) {
-            disconnectPlayer(client);
+            disconnectPlayer(client, player);
         }
     }
 
-    private static boolean isPlayerMoving(Minecraft client) {
-        if (client.player == null) return false;
-
+    private static boolean isPlayerActive(Minecraft client, Player player) {
         boolean input =
-                client.options.keyUp.isDown() ||
-                client.options.keyDown.isDown() ||
-                client.options.keyLeft.isDown() ||
-                client.options.keyRight.isDown() ||
-                client.options.keyJump.isDown() ||
-                client.options.keySprint.isDown() ||
-                client.options.keyAttack.isDown() ||
-                client.options.keyUse.isDown() ||
-                client.options.keyPlayerList.isDown() ||
-                client.options.keyInventory.isDown() ||
-                client.options.keyChat.isDown();
+                client.options.keyUp.isDown()
+                        || client.options.keyDown.isDown()
+                        || client.options.keyLeft.isDown()
+                        || client.options.keyRight.isDown()
+                        || client.options.keyJump.isDown()
+                        || client.options.keySprint.isDown()
+                        || client.options.keyAttack.isDown()
+                        || client.options.keyUse.isDown()
+                        || client.options.keyPlayerList.isDown()
+                        || client.options.keyInventory.isDown()
+                        || client.options.keyChat.isDown();
 
-        float yaw = client.player.getYRot();
-        float pitch = client.player.getXRot();
+        float yaw = player.getYRot();
+        float pitch = player.getXRot();
 
-        boolean rotated = yaw != lastYaw || pitch != lastPitch;
+        boolean rotated = (yaw != lastYaw) || (pitch != lastPitch);
 
         lastYaw = yaw;
         lastPitch = pitch;
@@ -80,24 +82,28 @@ public class HealthMonitor {
         return input || rotated;
     }
 
-    private static void disconnectPlayer(Minecraft client) {
-        if (client.player == null || client.getConnection() == null) return;
+    private static void resetAfkState() {
+        afkTicks = 0;
+        healthWhenAfkStarted = -1f;
+        tookDamageWhileAfk = false;
+    }
 
-        Player player = client.player;
+    private static void disconnectPlayer(Minecraft client, Player player) {
+        if (client.getConnection() == null) return;
 
-        String playerX = coordsFormat.format(player.getX() >= 0 ? Math.floor(player.getX()) : Math.ceil(player.getX()));
-        String playerY = coordsFormat.format(player.getY() >= 0 ? Math.floor(player.getY()) : Math.ceil(player.getY()));
-        String playerZ = coordsFormat.format(player.getZ() >= 0 ? Math.floor(player.getZ()) : Math.ceil(player.getZ()));
+        String playerX = formatCoord(player.getX());
+        String playerY = formatCoord(player.getY());
+        String playerZ = formatCoord(player.getZ());
 
         MutableComponent text = Component.literal(
                         "You were disconnected by Auto Logout due to taking damage while AFK.\n\n")
                 .withStyle(style -> style.withBold(true).withColor(ChatFormatting.RED))
                 .append(Component.literal(
-                                "Health: " + healthFormat.format(player.getHealth()) +
+                                "Health: " + HEALTH_FORMAT.format(player.getHealth()) +
                                         " (≈" + Math.floor(player.getHealth() / 2) + " Hearts)\n")
                         .withStyle(style -> style.withColor(ChatFormatting.GOLD)))
                 .append(Component.literal(
-                                String.format("Coordinates: %s %s %s", playerX, playerY, playerZ))
+                                "Coordinates: %s %s %s".formatted(playerX, playerY, playerZ))
                         .withStyle(style -> style.withColor(ChatFormatting.GOLD)));
 
         if (ConfigManager.isEntityTrackingEnabled) {
@@ -115,8 +121,11 @@ public class HealthMonitor {
 
         client.getConnection().getConnection().disconnect(text);
 
-        afkTicks = 0;
-        healthWhenAfkStarted = -1f;
-        tookDamageWhileAfk = false;
+        resetAfkState();
+    }
+
+    private static String formatCoord(double v) {
+        double rounded = (v >= 0) ? Math.floor(v) : Math.ceil(v);
+        return COORDS_FORMAT.format(rounded);
     }
 }
